--- a/studentinfo.html
+++ b/studentinfo.html
@@ -1,11 +1,410 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Student Attendance Dashboard</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Supabase SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <!-- SheetJS (for Excel export) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <style>
+    body { padding: 20px; }
+    .hidden { display: none; }
+    .status-box {
+      display: inline-block;
+      width: 140px;
+      padding: 10px;
+      margin: 5px;
+      text-align: center;
+      border-radius: 5px;
+      color: white;
+      font-weight: bold;
+      font-size: 0.9em;
+    }
+    .status-green { background-color: #28a745; }
+    .status-red { background-color: #dc3545; }
+    .status-yellow { background-color: #ffc107; }
+  </style>
 </head>
 <body>
-    <h1>page under development!!</h1>
+
+  <div class="container">
+    <h1 class="mb-4 text-center">Student Attendance Dashboard</h1>
+
+    <!-- Student Login Form -->
+    <div class="card mb-4">
+      <div class="card-header">Enter Your Details</div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-4 mb-2">
+            <label for="studentCourse" class="form-label">Course</label>
+            <select id="studentCourse" class="form-select">
+              <option value="MCA">MCA</option>
+              <option value="MBA">MBA</option>
+            </select>
+          </div>
+          <div class="col-md-4 mb-2">
+            <label for="studentSemester" class="form-label">Semester</label>
+            <select id="studentSemester" class="form-select">
+              <option value="1">Sem 1</option>
+              <option value="2">Sem 2</option>
+              <option value="3">Sem 3</option>
+              <option value="4">Sem 4</option>
+            </select>
+          </div>
+          <div class="col-md-4 mb-2">
+            <label for="studentRoll" class="form-label">Roll Number</label>
+            <input type="text" id="studentRoll" class="form-control" placeholder="Enter Roll Number">
+          </div>
+        </div>
+        <button id="loadDashboardBtn" class="btn btn-primary mt-3">View Dashboard</button>
+      </div>
+    </div>
+
+    <!-- Student Dashboard Section -->
+    <div id="studentDashboard" class="hidden">
+      <h2 class="text-center mb-4">Welcome, <span id="studentName"></span>!</h2>
+      <div class="card mb-4">
+        <div class="card-header">Student Information</div>
+        <div class="card-body">
+          <p><strong>Roll Number:</strong> <span id="studentRollDisplay"></span></p>
+          <p><strong>Course:</strong> <span id="studentCourseDisplay"></span></p>
+          <p><strong>Semester:</strong> <span id="studentSemesterDisplay"></span></p>
+          <p><strong>Total Attendance:</strong> <span id="studentAttendance" class="fw-bold"></span></p>
+        </div>
+      </div>
+
+      <!-- Detailed Attendance Fetch Section -->
+      <div class="card mb-4">
+        <div class="card-header">Fetch Individual Attendance Details</div>
+        <div class="card-body">
+          <button id="toggleDetailsFormBtn" class="btn btn-info mb-3">Show/Hide Attendance Details Form</button>
+          <div id="detailsForm" class="mb-3" style="display:none;">
+            <!-- Here we use the student's own course/semester so we omit separate inputs -->
+            <div class="mb-3">
+              <label for="detailDuration" class="form-label">Duration</label>
+              <select id="detailDuration" class="form-select">
+                <option value="single">Single Day</option>
+                <option value="multiple">Multiple Days</option>
+              </select>
+            </div>
+            <div id="singleDateDiv" class="mb-3">
+              <label for="singleDate" class="form-label">Select Date</label>
+              <input type="date" id="singleDate" class="form-control">
+            </div>
+            <div id="multipleDateDiv" class="mb-3" style="display:none;">
+              <label class="form-label">Select Date Range</label>
+              <div class="row">
+                <div class="col">
+                  <input type="date" id="fromDate" class="form-control" placeholder="From Date">
+                </div>
+                <div class="col">
+                  <input type="date" id="toDate" class="form-control" placeholder="To Date">
+                </div>
+              </div>
+            </div>
+            <button id="fetchAttendanceDetailsBtn" class="btn btn-primary">Submit</button>
+          </div>
+          
+          <!-- Container to display fetched attendance details -->
+          <div id="attendanceDetailsTableContainer" class="mt-4" style="display:none;">
+            <h5>Individual Attendance Details</h5>
+            <div class="table-responsive">
+              <table id="attendanceDetailsTable" class="table table-bordered">
+                <!-- Table header and body will be generated dynamically -->
+              </table>
+            </div>
+            <button id="exportDetailsToExcelBtn" class="btn btn-secondary mt-3">Export to Excel</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div> <!-- End Container -->
+
+  <script>
+    // Initialize Supabase client (replace with your actual key)
+    const supabaseUrl = 'https://elxyhkfuuugjskallwsp.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVseHloa2Z1dXVnanNrYWxsd3NwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzg4MjA5ODksImV4cCI6MjA1NDM5Njk4OX0.BAEvcCVIQiVdsg0m3xX72Xi0p-vnJ4WqfZU0mE_Tuk0';
+    const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+    // Spinner helper functions
+    function showSpinnerOnButton(button) {
+      button.disabled = true;
+      const spinner = document.createElement('span');
+      spinner.className = "spinner-border spinner-border-sm ms-2";
+      spinner.role = "status";
+      spinner.ariaHidden = "true";
+      button.appendChild(spinner);
+    }
+    function hideSpinnerOnButton(button) {
+      button.disabled = false;
+      const spinner = button.querySelector('.spinner-border');
+      if (spinner) spinner.remove();
+    }
+
+    // Toggle details form visibility
+    document.getElementById('toggleDetailsFormBtn').addEventListener('click', () => {
+      const formDiv = document.getElementById('detailsForm');
+      formDiv.style.display = formDiv.style.display === 'none' ? 'block' : 'none';
+    });
+
+    // Toggle date inputs based on duration selection
+    document.getElementById('detailDuration').addEventListener('change', toggleDateInputs);
+    function toggleDateInputs() {
+      const duration = document.getElementById('detailDuration').value;
+      if (duration === 'single') {
+        document.getElementById('singleDateDiv').style.display = 'block';
+        document.getElementById('multipleDateDiv').style.display = 'none';
+      } else {
+        document.getElementById('singleDateDiv').style.display = 'none';
+        document.getElementById('multipleDateDiv').style.display = 'block';
+      }
+    }
+
+    // Load Dashboard on "View Dashboard" button click
+    document.getElementById('loadDashboardBtn').addEventListener('click', async function() {
+      const course = document.getElementById('studentCourse').value;
+      const semester = document.getElementById('studentSemester').value;
+      const rollNumber = document.getElementById('studentRoll').value.trim();
+
+      if (!course || !semester || !rollNumber) {
+        alert("Please fill in all details.");
+        return;
+      }
+
+      // Fetch student details from the appropriate table (e.g., mca_sem1)
+      const tableName = `${course.toLowerCase()}_sem${semester}`;
+      const { data: studentData, error: studentError } = await supabaseClient
+        .from(tableName)
+        .select('*')
+        .eq('roll_number', rollNumber)
+        .maybeSingle();
+
+      if (studentError || !studentData) {
+        alert("Student not found. Please check details.");
+        return;
+      }
+
+      // Populate the dashboard with student info
+      document.getElementById('studentName').textContent = studentData.student_name;
+      document.getElementById('studentRollDisplay').textContent = rollNumber;
+      document.getElementById('studentCourseDisplay').textContent = course;
+      document.getElementById('studentSemesterDisplay').textContent = semester;
+
+      // Fetch attendance records from the 'attendance' table
+      const { data: attendanceData, error: attendanceError } = await supabaseClient
+        .from('attendance')
+        .select('*')
+        .eq('course', course)
+        .eq('semester', semester);
+
+      if (attendanceError || !attendanceData.length) {
+        document.getElementById('studentAttendance').textContent = "No attendance records found.";
+      } else {
+        // Calculate overall attendance percentage for this student
+        let totalClasses = 0, attendedClasses = 0;
+        attendanceData.forEach(session => {
+          if (session.data && session.data.attendance && session.data.attendance[rollNumber] !== undefined) {
+            totalClasses++;
+            if (session.data.attendance[rollNumber] === true) attendedClasses++;
+          }
+        });
+        let percentage = totalClasses > 0 ? ((attendedClasses / totalClasses) * 100).toFixed(2) : '0';
+        let percentageColor = percentage < 75 ? 'text-danger' : (percentage < 80 ? 'text-warning' : 'text-success');
+        document.getElementById('studentAttendance').innerHTML = `<span class="${percentageColor}">${percentage}%</span>`;
+      }
+
+      // Show the dashboard section
+      document.getElementById('studentDashboard').classList.remove('hidden');
+    });
+
+    // Fetch Detailed Attendance for the logged-in student
+    async function fetchAttendanceDetails() {
+      const fetchBtn = document.getElementById('fetchAttendanceDetailsBtn');
+      showSpinnerOnButton(fetchBtn);
+      // Use the student's own course, semester, and roll from the dashboard
+      const course = document.getElementById('studentCourseDisplay').textContent;
+      const semester = parseInt(document.getElementById('studentSemesterDisplay').textContent, 10);
+      const rollNumber = document.getElementById('studentRollDisplay').textContent.trim();
+      const duration = document.getElementById('detailDuration').value;
+      let fromDate, toDate;
+      if (duration === 'single') {
+        fromDate = toDate = document.getElementById('singleDate').value;
+        if (!fromDate) {
+          alert("Please select a date.");
+          hideSpinnerOnButton(fetchBtn);
+          return;
+        }
+      } else {
+        fromDate = document.getElementById('fromDate').value;
+        toDate = document.getElementById('toDate').value;
+        if (!fromDate || !toDate) {
+          alert("Please select both from and to dates.");
+          hideSpinnerOnButton(fetchBtn);
+          return;
+        }
+      }
+      try {
+        // Fetch attendance records for the selected date range
+        const { data, error } = await supabaseClient
+          .from('attendance')
+          .select('*')
+          .eq('course', course)
+          .eq('semester', semester)
+          .gte('date', fromDate)
+          .lte('date', toDate);
+        if (error) {
+          console.error("Error fetching attendance details:", error);
+          alert("Error fetching data.");
+          hideSpinnerOnButton(fetchBtn);
+          return;
+        }
+        if (!data || data.length === 0) {
+          alert("No attendance records found for the selected criteria.");
+          hideSpinnerOnButton(fetchBtn);
+          return;
+        }
+        // Define hour blocks for morning and afternoon sessions.
+        const morningHours = ["9:30-10:30", "10:30-11:30", "11:30-12:30"];
+        const afternoonHours = ["1:30-2:30", "2:30-3:30"];
+        // Aggregate attendance data by date for the logged-in student.
+        const dailyAttendance = {};
+        data.forEach(session => {
+          const sessionDate = session.date;
+          if (!dailyAttendance[sessionDate]) {
+            dailyAttendance[sessionDate] = { morning: {}, afternoon: {} };
+          }
+          const sessionAttendance = (session.data && session.data.attendance) ? session.data.attendance : {};
+          if (rollNumber in sessionAttendance) {
+            if (morningHours.includes(session.hour)) {
+              dailyAttendance[sessionDate].morning[session.hour] = sessionAttendance[rollNumber];
+            } else if (afternoonHours.includes(session.hour)) {
+              dailyAttendance[sessionDate].afternoon[session.hour] = sessionAttendance[rollNumber];
+            }
+          }
+        });
+        const dateColumns = Object.keys(dailyAttendance).sort();
+        let captionText = "";
+        if (duration === "single") {
+          captionText = `${course} - Semester ${semester} on ${fromDate}`;
+        } else {
+          captionText = `${course} - Semester ${semester} from ${fromDate} to ${toDate}`;
+        }
+        let tableHTML = `<caption class="text-center fw-bold fs-5 mb-3">${captionText}</caption>`;
+        tableHTML += '<thead class="table-light"><tr>';
+        tableHTML += '<th>Date</th><th>Day Score</th><th>Attendance (Status Codes)</th></tr></thead><tbody>';
+        let totalScore = 0;
+        let totalDays = 0;
+        dateColumns.forEach(date => {
+          totalDays++;
+          const studentDay = dailyAttendance[date];
+          let dayScore = 0;
+          let statusArr = [];
+          let morningStatuses = morningHours.map(hour => {
+            let status = "a";
+            if (studentDay.morning && (hour in studentDay.morning)) {
+              status = studentDay.morning[hour] === true ? "p" : "a";
+            }
+            return status;
+          });
+          let afternoonStatuses = afternoonHours.map(hour => {
+            let status = "a";
+            if (studentDay.afternoon && (hour in studentDay.afternoon)) {
+              status = studentDay.afternoon[hour] === true ? "p" : "a";
+            }
+            return status;
+          });
+          statusArr = morningStatuses.concat(afternoonStatuses);
+          if (studentDay.morning && Object.keys(studentDay.morning).length === morningHours.length) {
+            if (morningHours.every(hour => studentDay.morning[hour] === true)) {
+              dayScore += 0.5;
+            }
+          }
+          if (studentDay.afternoon && Object.keys(studentDay.afternoon).length === afternoonHours.length) {
+            if (afternoonHours.every(hour => studentDay.afternoon[hour] === true)) {
+              dayScore += 0.5;
+            }
+          }
+          totalScore += dayScore;
+          tableHTML += `<tr><td>${date}</td><td>${dayScore}</td><td>${statusArr.join(", ")}</td></tr>`;
+        });
+        tableHTML += '</tbody>';
+        const overallPercentage = totalDays > 0 ? ((totalScore / totalDays) * 100).toFixed(2) : 0;
+        tableHTML += `<tfoot><tr><td colspan="3" class="text-end fw-bold">Overall Attendance: ${overallPercentage}%</td></tr></tfoot>`;
+        document.getElementById('attendanceDetailsTable').innerHTML = tableHTML;
+        document.getElementById('attendanceDetailsTableContainer').style.display = 'block';
+      } catch (err) {
+        console.error("Error processing attendance details:", err);
+        alert("Error processing data.");
+      } finally {
+        hideSpinnerOnButton(fetchBtn);
+      }
+    }
+    // Attach event listener for the "Submit" button in the details form.
+    document.getElementById('fetchAttendanceDetailsBtn').addEventListener('click', fetchAttendanceDetails);
+
+    // Export Detailed Attendance to Excel
+    function exportDetailsToExcel() {
+      const table = document.getElementById('attendanceDetailsTable');
+      const worksheet = XLSX.utils.table_to_sheet(table);
+      const workbook = XLSX.utils.book_new();
+      // Convert percentage cells to proper numbers with formatting.
+      for (let cell in worksheet) {
+        if (cell[0] === '!') continue;
+        const cellObj = worksheet[cell];
+        if (cellObj.v && typeof cellObj.v === 'string' && cellObj.v.trim().endsWith('%')) {
+          let num = parseFloat(cellObj.v.replace('%', ''));
+          cellObj.v = num / 100;
+          cellObj.t = 'n';
+          cellObj.z = '0.00%';
+        }
+      }
+      const course = document.getElementById('studentCourseDisplay').textContent;
+      const sem = document.getElementById('studentSemesterDisplay').textContent;
+      let fileName = `Individual_Attendance_${course}_Sem${sem}`;
+      const duration = document.getElementById('detailDuration').value;
+      if (duration === 'single') {
+        const singleDate = document.getElementById('singleDate').value;
+        fileName += `_${singleDate}`;
+      } else {
+        const fromDate = document.getElementById('fromDate').value;
+        const toDate = document.getElementById('toDate').value;
+        fileName += `_${fromDate}_to_${toDate}`;
+      }
+      fileName += ".xlsx";
+      XLSX.utils.book_append_sheet(workbook, worksheet, "IndividualAttendance");
+      XLSX.writeFile(workbook, fileName);
+    }
+    document.getElementById('exportDetailsToExcelBtn').addEventListener('click', exportDetailsToExcel);
+
+    function resetDashboard() {
+  // Hide the entire dashboard
+  document.getElementById('studentDashboard').classList.add('hidden');
+  
+  // Clear student details
+  document.getElementById('studentName').textContent = '';
+  document.getElementById('studentRollDisplay').textContent = '';
+  document.getElementById('studentCourseDisplay').textContent = '';
+  document.getElementById('studentSemesterDisplay').textContent = '';
+  document.getElementById('studentAttendance').textContent = '';
+
+  // Hide the attendance details table container (the fetched report)
+  document.getElementById('attendanceDetailsTableContainer').style.display = 'none';
+
+  // Hide the details form if it is open
+  document.getElementById('detailsForm').style.display = 'none';
+}
+
+document.getElementById('studentCourse').addEventListener('change', resetDashboard);
+document.getElementById('studentSemester').addEventListener('change', resetDashboard);
+document.getElementById('studentRoll').addEventListener('input', resetDashboard);
+
+
+  </script>
+
 </body>
 </html>
