--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
             const password = document.getElementById("password").value;
 
             if (username === "12345" && password === "abcd") {
-                window.location.href = "index.html"; // Redirect to faculty page
+                window.location.href = "main.html"; // Redirect to faculty page
             } else {
                 document.getElementById("errorMessage").textContent = "Invalid username or password!";
             }
