--- a/main.html
+++ b/main.html
@@ -18,6 +18,152 @@
   flex-wrap: wrap;
 }
 
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+  margin: 20px;
+  color: #333;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #343a40;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  border: none;
+}
+
+.card-header {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+  border-bottom: 2px solid #0056b3;
+}
+
+.card-body {
+  padding: 20px;
+}
+
+.form-label {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.form-control,
+.form-select {
+  border-radius: 6px;
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ced4da;
+}
+
+.btn {
+  border-radius: 6px;
+  padding: 10px 20px;
+  font-size: 1rem;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border: none;
+}
+
+.btn-success {
+  background-color: #28a745;
+  border: none;
+}
+
+.btn-info {
+  background-color: #17a2b8;
+  border: none;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  border: none;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.student-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+  background-color: white;
+}
+
+.status-btn {
+  padding: 5px 15px;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.status-btn.present {
+  background-color: #28a745;
+  color: white;
+}
+
+.status-btn.absent {
+  background-color: #dc3545;
+  color: white;
+}
+
+.status-box {
+  width: 150px;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 8px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.status-green {
+  background-color: #28a745;
+}
+
+.status-red {
+  background-color: #dc3545;
+}
+
+#reportContainer {
+  background-color: white;
+  border: 2px solid #007bff;
+  border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .status-box {
+    width: 100px;
+  }
+
+  .student-item {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .status-btn {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+
+
     .status-btn {
       padding: 5px 10px;
       border: none;
@@ -40,6 +186,8 @@
     }
     .status-green { background-color: #28a745; }
     .status-red { background-color: #dc3545; }
+
+    
   </style>
 </head>
 <body>
